--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"gulp-sass": "^5.0.0",
 		"gulp-sourcemaps": "^3.0.0",
 		"gulp-watch": "^5.0.1",
-		"sass": "^1.43.4"
+		"sass": "^1.43.4",
+		"swiper": "^11.0.5"
 	},
 	"devDependencies": {
 		"gulp-format-html": "^1.2.5",
